--- a/login/base/templates/base.html
+++ b/login/base/templates/base.html
@@ -4,7 +4,8 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>WorkMate!</title>
-        <link rel="stylesheet" href="static/css/dashboard.css">
+        {% load static %}
+        <link rel="stylesheet" href="{% static 'css/dashboard.css' %}">        
         <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet">
     </head>
 <body>
@@ -17,7 +18,7 @@
     <i class="bx bx-menu" id="btn"></i>
   </div>
   <div class="user">
-    <img src="static/user-img.jpg" alt="me" class="user-img">
+    <img src="../static/user-img.jpg" alt="me" class="user-img">
     <div>
       <p class="bold">Omar Pacheco</p>
       <p>Admin</p>
@@ -83,7 +84,7 @@
   let btn = document.querySelector('#btn');
   let sidebar = document.querySelector('.sidebar');
 
-  btn.onClick = function () {
+  btn.onclick = function () {
     sidebar.classList.toggle('active');
   };
 </script>
