--- a/login/base/static/css/dashboard.css
+++ b/login/base/static/css/dashboard.css
@@ -147,3 +147,14 @@
 .sidebar.active ul li .tooltip {
   display: none;
 }
+
+.main-content {
+  position: relative;
+  background-color: #eee;
+  min-height: 100vh;
+  top: 0;
+  left: 80px;
+  transition: all 0.5s ease;
+  width: calc(100% - 80px);
+  padding: 1rem;
+}
