--- a/login/base/templates/base.html
+++ b/login/base/templates/base.html
@@ -34,28 +34,28 @@
     </li>
     <li>
       <a href="#">
-        <i class="bx bxs-grid-alt"></i>
+        <i class='bx bx-list-check'></i>
         <span class="nav-item">Gestion de Tareas</span>
       </a>
       <span class="tooltip">Gestion de Tareas</span>
     </li>
     <li>
       <a href="#">
-        <i class="bx bxs-grid-alt"></i>
+        <i class='bx bxs-user-account'></i>
         <span class="nav-item">Gestion de Usuarios</span>
       </a>
       <span class="tooltip">Gestion de Usuarios</span>
     </li>
     <li>
       <a href="#">
-        <i class="bx bxs-grid-alt"></i>
+        <i class='bx bxs-edit'></i>
         <span class="nav-item">Crear Nueva Tarea</span>
       </a>
       <span class="tooltip">Crear Nueva Tarea</span>
     </li>
     <li>
       <a href="#">
-        <i class="bx bxs-grid-alt"></i>
+        <i class='bx bx-list-ul'></i>
         <span class="nav-item">Mis Tareas</span>
       </a>
       <span class="tooltip">Mis Tareas</span>
