--- a/login/base/templates/gestion-tareas.html
+++ b/login/base/templates/gestion-tareas.html
@@ -71,7 +71,7 @@
 
     <div class="main-content">
       <div class="container">
-        <h1>Dashboard</h1>
+        <h1>Gestion de Tareas</h1>
       </div>
     </div>
   </body>
