--- a/login/base/templates/home.html
+++ b/login/base/templates/home.html
@@ -53,10 +53,10 @@
       <span class="tooltip">Mis Tareas</span>
     </li>
     <li>
-      <a href="{% url "base:logout" %}">
-        <i class="bx bx-log-out"></i>
-        <span class="nav-item">Cerrar sesion</span>
-      </a>
+      <form method="POST" action="{% url 'base:logout' %}" class="logout-form">
+        {% csrf_token %}
+        <button type="submit" aria-label="Logout">Cerrar sesión</button>
+      </form>
       <span class="tooltip">Cerrar sesion</span>
     </li>
   </ul>
