--- a/login/base/templates/registration/login.html
+++ b/login/base/templates/registration/login.html
@@ -1,4 +1,12 @@
+{% load static %}
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>WorkMate!</title>
+  <link rel="stylesheet" href="{% static 'css/auth.css' %}">        
+  <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet">
 
+</head>
 <div class="shadow-wrap">
  <div class="form-wrap">
   <h3>Inicio de Sesión</h3>
