--- a/login/base/templates/crear-nueva-tarea.html
+++ b/login/base/templates/crear-nueva-tarea.html
@@ -21,7 +21,9 @@
     <div class="user">
       <img src="{% static "user-img.jpg" %}" alt="me" class="user-img">
       <div>
-        <p class="bold">Omar Pacheco</p>
+        {% if user.is_authenticated %}
+        <p class="bold">Hello, {{user.username}}</p>
+        {% endif %}
         <p>Admin</p>
       </div>
     </div>
