--- a/login/base/templates/gestion-listausuarios.html
+++ b/login/base/templates/gestion-listausuarios.html
@@ -18,10 +18,9 @@
       </div>
       <div class="user">
         <img src="{% static "user-img.jpg" %}" alt="me" class="user-img">
-        <div>
-          <p class="bold">Omar Pacheco</p>
-          <p>Admin</p>
-        </div>
+        {% if user.is_authenticated %}
+        <p class="bold">Hello, {{user.username}}</p>
+        {% endif %}
       </div>
       <ul>
         <li>
