--- a/login/base/templates/gestion-usuarios.html
+++ b/login/base/templates/gestion-usuarios.html
@@ -19,8 +19,9 @@
       <div class="user">
         <img src="{% static "user-img.jpg" %}" alt="me" class="user-img">
         <div>
-          <p class="bold">Omar Pacheco</p>
-          <p>Admin</p>
+          {% if user.is_authenticated %}
+          <p class="bold">Hello, {{user.username}}</p>
+          {% endif %}
         </div>
       </div>
       <ul>
