last last minute change to edit user

--- a/login/base/templates/crear-usuario.html
+++ b/login/base/templates/crear-usuario.html
@@ -42,6 +42,7 @@
     <div class="main-content">
         <div class="container">
             <h1>Create New User</h1>
+            <a href="{% url 'base:gestion-usuarios' %}" class="cancel-btn">Cancel</a> <!-- Cancel Button -->
             <form method="POST" action="{% url 'base:crear-usuario' %}">
                 {% csrf_token %}
                 {{ form.as_p }}
@@ -49,7 +50,6 @@
             </form>
             <a href="{% url 'base:gestion-usuarios' %}" class="cancel-btn">Cancel</a> <!-- Cancel Button -->
         </div>
-        
     </div>
 
     <script>
