--- a/login/base/templates/editar-usuario.html
+++ b/login/base/templates/editar-usuario.html
@@ -8,7 +8,34 @@
 </head>
 <body>
     <div class="sidebar">
-        <!-- Sidebar content -->
+        <div class="top">
+            <div class="logo">
+                <i class="bx bxl-codepen"></i>
+                <span>WorkMate</span>
+            </div>
+            <i class="bx bx-menu" id="btn"></i>
+        </div>
+        <div class="user">
+            <img src="{% static "user-img.jpg" %}" alt="me" class="user-img">
+            <div>
+                {% if user.is_authenticated %}
+                <p class="bold">Hello, {{user.username}}</p>
+                {% endif %}
+            </div>
+        </div>
+        <ul>
+            <li><a href="/"><i class="bx bxs-grid-alt"></i><span class="nav-item">Dashboard</span></a></li>
+            <li><a href="/gestion-tareas/"><i class="bx bx-task"></i><span class="nav-item">Gestion de Tareas</span></a></li>
+            <li><a href="/gestion-usuarios/"><i class="bx bxs-user-account"></i><span class="nav-item">Gestion de Usuarios</span></a></li>
+            <li><a href="/crear-nueva-tarea/"><i class="bx bxs-edit"></i><span class="nav-item">Crear Nueva Tarea</span></a></li>
+            <li><a href="/mis-tareas/"><i class="bx bxs-notepad"></i><span class="nav-item">Mis Tareas</span></a></li>
+            <li>
+                <form method="POST" action="{% url 'base:logout' %}" class="logout-form">
+                    {% csrf_token %}
+                    <button type="submit" aria-label="Logout">Cerrar sesión</button>
+                </form>
+            </li>
+        </ul>
     </div>
 
     <div class="main-content">
