--- a/login/base/templates/editar-usuario.html
+++ b/login/base/templates/editar-usuario.html
@@ -51,5 +51,14 @@
             </form>
         </div>
     </div>
+
+    <script>
+        let btn = document.querySelector('#btn');
+        let sidebar = document.querySelector('.sidebar');
+    
+        btn.onclick = function () {
+          sidebar.classList.toggle('active');
+        };
+      </script>
 </body>
 </html>
