--- a/login/base/static/css/dashboard.css
+++ b/login/base/static/css/dashboard.css
@@ -272,6 +272,69 @@ a:hover {
 	top:1px;
 }
 
+.slide-pane {
+  position: fixed;
+  top: 0;
+  right: -100%; /* Initially off-screen */
+  width: 400px;
+  height: 100%;
+  background-color: #fff;
+  box-shadow: -5px 0 15px rgba(0, 0, 0, 0.2);
+  overflow-y: auto;
+  transition: right 0.3s ease;
+  z-index: 1000;
+  padding: 20px;
+}
+
+.slide-pane.active {
+  right: 0; /* Slides in */
+}
+
+.pane-content {
+  padding: 20px;
+}
+
+.edit-btn {
+  background-color: #007bff;
+  color: white;
+  border: none;
+  padding: 10px 20px;
+  cursor: pointer;
+  border-radius: 5px;
+  margin-top: 10px;
+  transition: background-color 0.3s ease;
+}
+
+.edit-btn:hover {
+  background-color: #0056b3;
+}
+form {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+
+form input, form select, form textarea {
+  padding: 10px;
+  font-size: 1rem;
+  border-radius: 5px;
+  border: 1px solid #ccc;
+  margin-bottom: 10px;
+  outline: none;
+}
+
+form input[type="submit"], form button {
+  background-color: #007bff;
+  color: white;
+  padding: 12px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+form input[type="submit"]:hover, form button:hover {
+  background-color: #0056b3;
+}
 .hidden {
   display: none
 }
